<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">迈聆SDK-DEMO</string>
    <string name="test_init_sdk">注册sdk</string>
    <string name="tip_username_input">请输入手机号</string>
    <string name="tip_password_input">请输入密码</string>
    <string name="tip_nickname_input">请输入昵称,默认为应用名称</string>
    <string name="tip_meeting_input">请输入房间号</string>
    <string name="text_login">登录</string>
    <string name="text_vertify">验证token</string>
    <string name="text_init_call">初始化呼叫</string>
    <string name="text_create_meeting">创建房间</string>
    <string name="text_join_meeting">加入房间</string>
    <string name="text_leave_meeting">离开房间</string>
    <string name="text_dismiss_meeting">解散房间</string>
    <string name="text_change_camera">切换相机</string>
    <string name="text_open_camera">打开摄像头</string>
    <string name="text_close_camera">关闭摄像头</string>
    <string name="text_open_audio">打开麦克风</string>
    <string name="text_close_audio">关闭麦克风</string>
    <string name="text_open_share">开启共享</string>
    <string name="text_close_share">关闭共享</string>
    <string name="tip_open_app_permission">无法获取到该系统权限，请确认开启后重试</string>
    <string name="text_network_error">网络异常，请检查网络后重试</string>
    <string name="video_login_out">检测到您已掉线，是否立即重新加入房间?</string>
    <string name="remove_by_host">你已被主持人移出房间</string>
    <string name="confirm_rejoin">重新加入</string>
    <string name="cancel_rejoin">暂不加入</string>
    <string name="end_first">立即结束</string>
</resources>